--- a/README
+++ b/README
@@ -1,5 +1,4 @@
-This is a mirror of http://www.vim.org/scripts/script.php?script_id=1994
 
 This is the syntax highlighter for Atlassian Confluence WIKI 
 
-http://confluence.atlassian.com/renderer/notationhelp.action?section=all
+set ft=confluencewiki 
